tests/parser-test-files/bad-files/parse-expression.4.error
error: Malformed expression
  --> test:4:10
   |
 4 |  (define x (f . 3))
   |            ^^^^^^^ unexpected dotted list
